--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 psaw~=0.0.12
 numpy~=1.19.4
 transformers~=3.5.1
-torchtext~=0.8
+torchtext~=0.8.0
 git+https://github.com/RaRe-Technologies/smart_open@master
 lda~=2.0.0
 nltk~=3.5
@@ -17,3 +17,6 @@ matplotlib~=3.3.3
 torch~=1.7.0
 pytorch-pretrained-bert==0.6.2
 networkx==1.11
+scipy~=1.5.4
+corextopic~=1.0.6
+scikit-learn~=0.23.2
